--- a/templates/template1.hbs
+++ b/templates/template1.hbs
@@ -37,7 +37,7 @@
         <div>
 
             <div class="px-4">
-                <h2 class="mx-4 font-bold mt-4">{{user.firstname+ " " +user.lastname}} </h2>
+                <h2 class="mx-4 font-bold mt-4">{{data.user.firstname}} {{data.user.lastname}} </h2>
                 {{!-- <p class="mx-4 fs-small mb-2 text-secondary">{{user.tagline}}</p> --}}
             </div>
 
@@ -50,13 +50,13 @@
                     <h3 class="mb-3 ls-2">• INFO</h3>
 
                     <h4 class="m-0 text-secondary">Position:</h4>
-                    <p class="m-0 mb-2">{{user.jobtitle}}</p>
+                    <p class="m-0 mb-2">{{data.user.jobtitle}}</p>
                     <h4 class="m-0 text-secondary">Location:</h4>
-                    <p class="m-0 mb-2">{{user.city+" "+user.state}}</p>
+                    <p class="m-0 mb-2">{{data.user.city}} {{data.user.state}}</p>
                     <h4 class="m-0 text-secondary">Contact:</h4>
-                    <p class="m-0 mb-2">{{user.number}}</p>
+                    <p class="m-0 mb-2">{{data.user.number}}</p>
                     <h4 class="m-0 text-secondary">E-Mail:</h4>
-                    <p class="m-0">{{user.email}}</p>
+                    <p class="m-0">{{data.user.email}}</p>
 
                     <hr></hr>
 
@@ -72,8 +72,8 @@
                     <h3 class="mb-3 ls-2">• SKILLS</h3>
 
                     <div class="d-flex flex-wrap">
-                          {{#each user.skills}}
-                         <p class="technology rounded float-left my-1">{{user.skills}}
+                          {{#each data.user.skills}}
+                         <p class="technology rounded float-left my-1">{{data.user.skills}}
                            {{/each}}
                     </div>
 
@@ -83,17 +83,17 @@
 
                     <h3 class="mb-3 ls-2">• ABOUT</h3>
 
-                    <p class="m-0">{{user.aboutme}}</p>
+                    <p class="m-0">{{data.user.aboutme}}</p>
 
                     <hr></hr>
 
                     <h3 class="mb-3 ls-2">• WORK EXPERIENCE</h3>
 
-                          {{#each ex}}
+                          {{#each data.ex}}
         <div>
-            <h3 class="float-left text-secondary">• </h3> <h3 class="ps-3 text-secondary">{{ex.jobtitle}}</h3>
-            <p class="m-0 ps-3">{{ex.projectname}} • {{ex.startm}} {{ex.starty}}  {{ex.endm}} {{ex.endy }}</p>
-            <p class=" ps-3">{{ex.description}}</p>
+            <h3 class="float-left text-secondary">• </h3> <h3 class="ps-3 text-secondary">{{data.ex.jobtitle}}</h3>
+            <p class="m-0 ps-3">{{data.ex.projectname}} • {{data.ex.startm}} {{data.ex.starty}}  {{data.ex.endm}} {{data.ex.endy }}</p>
+            <p class=" ps-3">{{data.ex.description}}</p>
         </div>
                            {{/each}}
 
@@ -101,11 +101,11 @@
 
                     <h3 class="mb-3 ls-2">• EDUCATION</h3>
 
-                          {{#each ed}}
+                          {{#each data.ed}}
         <div>
-            <h3 class="float-left text-secondary">• </h3> <h3 class="ps-3 text-secondary">{{ed.school}}</h3>
-            <p class="m-0 ps-3">{{ed.degree}} • {{ed.field}} </p>
-            <p class="ps-3">{{ed.syear}} - {{ed.gyear}}</p>
+            <h3 class="float-left text-secondary">• </h3> <h3 class="ps-3 text-secondary">{{data.ed.school}}</h3>
+            <p class="m-0 ps-3">{{data.ed.degree}} • {{data.ed.field}} </p>
+            <p class="ps-3">{{data.ed.syear}} - {{data.ed.gyear}}</p>
         </div>
                            {{/each}}
 
@@ -113,5 +113,9 @@
             </div>
             
         </div>
+    
+    <script>
+        console.log(data.user.lastname);
+    </script>
     </body>
 </html>
